build migrations, make associations, begin validation for apartment model

--- a/test/fixtures/addresses.yml
+++ b/test/fixtures/addresses.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: addresses
+#
+#  id           :integer          not null, primary key
+#  street       :string
+#  number       :integer
+#  apartment    :string
+#  state        :string
+#  city         :string
+#  zip          :integer
+#  floor        :integer
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  apartment_id :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
